--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <div class="jumbotron jumbotron-fluid">
           <div class="container">
             <h1 class="display-4">Front end web developer</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
           </div>
         </div>
   <!-- about  -->
   <section class="container-fluid">
+
       <div id="about">
           <div class="title-section"id="title-section-about-me">
             <h2>About Me</h2>
@@ -94,23 +94,23 @@
 
     <!-- Project container -->
   <section class="container-fluid column-sub">
-      <div id="projects">
-          <div class="title-section">
-            <h2>Projects</h2>
+        <div class="title-section" id="projects">
+              <h2>Projects</h2>
           </div>
-
-          <div class="work-collection">
-            <div class="work-grid">
-              <div class="grid-item"><a href="https://tosin-t.github.io/Horiseon-code-refactor/"class="project-style"><img src="Assets/Images/Horiseon.jpeg" alt="Horiseon-logo" title="Horiseon Code Refactor"></a>
-              <br><h6> Horiseon Code Refactor</h6></div> 
-              <div class="grid-item"><a href="http://" class="project-style"><img src="Assets/Images/filler-photo-1.jpeg" alt="filler-photo-1" title="Project 2">Project 002<br> Coming soon!</br></a></div>
-              <div class="grid-item"><a href="http://" class="project-style"><img src="Assets/Images/filler-photo-1.jpeg" alt="filler-photo-2" title="Project 3">Project 003<br> Coming soon!</br></a></div>
-              <div class="grid-item"><a href="http://" class="project-style"><img src="Assets/Images/filler-photo-1.jpeg" alt="filler-photo-2" title="Project 4">Project 004<br> Coming soon!</br></a></div>
-            </div>
-          </div>
-          
-        </div>
-      </section>
+            <div class="container-fluid text-center project-1 work-grid">
+              <div class="row">
+                <div class="col-10 col-md-10">
+                  <div class="project-style col-sm-10">
+                    <img class="card-img-top" src="Assets/Images/Horiseon.jpeg" alt="Horiseon-logo" title="Horiseon Code Refactor">
+                    <div class="card-body">
+                      <h6 class="card-title"><br>Horiseon Code Refactor</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--  -->
+            
+  </section>
 
 
 
